apps/base/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: uptime-kuma-ingress
spec:
    rules:
        - host: ENC[AES256_GCM,data:hqMwjlWqbwAbKN3wpQVGwxDmHIG8yvsCVg==,iv:yronRQmMI5DDc2PYyAAQ3lO7rTVHT95ZrciOmMuXDP8=,tag:rLLpNeECYdf+eRzwWuYiEA==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: uptime-kuma-service
                        port:
                            number: 3001
sops:
    age:
        - recipient: age18dvn87z8hq2e0kak3f5d06xn9ynpcmfkkvep4ch8z32m7hkma3xsmgez3x
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDLzdEbFN3WTFTQ0Q4KzQx
[...]
            YDAF22FwBGBoFqFzEWfAMK3b6qd0GaH8iUwqh2bdL7YNfac7WnryCw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-04-18T17:06:01Z"
    mac: ENC[AES256_GCM,data:Rq4SCiXMig+nP3y+rc+wZya2CPK795YJ28r0tI4BtRKG14hqTgmgNFa2KFodPGTrToy8Cyz/2/ld/hClh6cwsn68K9MVHu1/Y3Y5NycNGr9rUmu0ahvgRjNbLGE3a5S++BotzQWpc4XRRmLA4yi8PUp16CVCMpvMvxrkXqyM7gc=,iv:thmK8bkFJfrw0n2sGwrscsXxFHBeuajM2ZHxZP6grH4=,tag:YuX0ixthXvrB16qW/FVjNA==,type:str]
    encrypted_regex: ^(host)$
    version: 3.10.2
